<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="apps.cloudy.day.wallpapertinter.ImageEditActivity">
    <item
        android:id="@+id/action_blend_mode"
        android:alphabeticShortcut="b"
        android:title="@string/action_blend_mode"
        android:orderInCategory="1"
        app:showAsAction="always">
        <menu>
            <group
                android:id="@+id/blend_modes"
                android:checkableBehavior="single">
                <item
                    android:id="@+id/blend_mode_add"
                    android:title="@string/action_add"
                    android:checked="true" />
                <item
                    android:id="@+id/blend_mode_subtract"
                    android:title="@string/action_subtract" />
                <item
                    android:id="@+id/blend_mode_multiply"
                    android:title="@string/action_multiply" />
                <item
                    android:id="@+id/blend_mode_screen"
                    android:title="@string/action_screen" />
                <item
                    android:id="@+id/blend_mode_overlay"
                    android:title="@string/action_overlay" />
            </group>
        </menu>
    </item>
    <item
        android:id="@+id/action_set_wallpaper"
        android:alphabeticShortcut="s"
        android:title="@string/set_wallpaper"
        android:orderInCategory="2"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_export"
        android:alphabeticShortcut="e"
        android:title="@string/action_export"
        android:orderInCategory="3"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_reset"
        android:alphabeticShortcut="r"
        android:title="@string/action_reset"
        android:orderInCategory="4"
        app:showAsAction="never" />
</menu>
